Sidebar alignment. Fixes #599

--- a/client/css/_library.styl
+++ b/client/css/_library.styl
@@ -9,8 +9,7 @@ section.library
       margin-bottom 10px
 
 .library-collections
-  margin-top 6px
-  border-left none
+  margin-top 3px
 
   .drag-publications-hint
     margin 0 20px 25px
